# ham

./: .clang-tidy  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.en.md  README.md  README_EN.md  build.sh  ham.spec
cmake/: building.cmake
doc/: Desgin_docs_Reference.md  Developer_Guide.md  Developer_Tutorial.md  User_Guide.md  api_docs_reference.md
src/: CMakeLists.txt  ham.c  ham.h  ham_comm.c  ham_comm.h
test/: CMakeLists.txt  ham_main.cpp  run_dt.sh
test/cases/: test_ham.cpp  test_ham_comm.cpp
test/conf/: config.yaml
